--- a/assets/css/iperfVisualizer_styles.css
+++ b/assets/css/iperfVisualizer_styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: linear-gradient(to left, rgb(179, 65, 0) 0%, rgb(212, 93, 2) 100%);
+    background: linear-gradient(to left, rgb(35,154,152) 0%, rgb(85, 49, 131) 100%);
     font-family: 'Open Sans', sans-serif;
     color: white;
     height: 1500px;
@@ -33,6 +33,13 @@ header h2 {
     margin-top: -2px;
 }
 
+header h6 {
+    padding-top: 10px;
+    margin-right: 200px;
+    float: right;
+    margin-top: -2px;
+}
+
 #headerLogo {
     height: 30px;
     float:left;
@@ -52,14 +59,12 @@ header h2 {
 }
 
 .fileChooser {
-    margin-top: 20px;
+    margin: auto;
     border-radius: 5px;
     border: 1px solid white;
     position: relative;
     height: 40px;
     width: 250px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .fileChooser .infotext {
@@ -90,8 +95,8 @@ header h2 {
 }
 
 .bigFileChooser {
-    width: 45%;
-    float: left;
+    width: 100%;
+    float: none;
 }
 
 .bigFileChooser .fileChooser {
@@ -107,8 +112,8 @@ header h2 {
 /*************************************** Chart Instance ***********************************/
 .placeHolderRectangle {
     position: relative;
-    float: left;
-    margin-left: 20px;
+    margin-top: 20px;
+    margin: auto;
 }
 
 .placeHolderRectangle .topRight {
@@ -163,8 +168,11 @@ header h2 {
     padding: 20px;
     color: grey;
     position: relative;
-    width: 45%;
-    float: left;
+    width: 80%;
+    float: none;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .infoBoxesContainer {
